# pyani-plus

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CITATIONS  CONTRIBUTING.md  LICENSE  Makefile  README.md  bandit.yml  pyproject.toml  requirements-dev.txt  requirements-thirdparty-linux.txt  requirements-thirdparty-macos.txt  requirements.txt  ruff.toml  slurm-11289534.out  slurm_testing.sh
.github/: ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.txt
.github/workflows/: build-linux.yaml  build-macos.yaml
pyani-plus/snakemake/: anim.py
pyani_plus/: __init__.py  classify.py  db_orm.py  method_anib.py  plot_run.py  private_cli.py  public_cli.py  public_cli_args.py  sql_tables.txt  tools.py  utils.py
pyani_plus/method/: method_anim.py
pyani_plus/methods/: __init__.py  anib.py  anim.py  animinimap2.py  dnadiff.py  external_alignment.py  fastani.py  lz_ani.py  method_anib.py  method_anim.py  method_branchwater.py  method_dnadiff.py  method_fastani.py  method_sourmash.py  orthoani.py  skani.py  sourmash.py
pyani_plus/snakemake/: __init__.py  anim.py  dnadiff.py  fastani.py  snakemake_scheduler.py
pyani_plus/workflows/: __init__.py  compute.smk  compute_column.smk  snakemake_anib.smk  snakemake_anim.smk  snakemake_anim_method.smk  snakemake_branchwater.smk  snakemake_dnadiff.smk  snakemake_external-alignment.smk  snakemake_fastani.smk  snakemake_index.smk  snakemake_sourmash.smk
scripts/: run_anim_workflow.py
scripts/snakemake_workflows/: snakemake_anim.smk
tests/: __init__.py  conftest.py  test_anib.py  test_anim.py  test_animinimap2.py  test_classify.py  test_coverage.py  test_dnadiff.py  test_external_alignment.py  test_fastani.py  test_interrupt.py  test_json.py  test_lzani.py  test_orm.py  test_private_cli.py  test_public_cli.py  test_self_vs_self.py  test_skani.py  test_snakemake_anim_workflow.py  test_sourmash.py  test_tools.py  test_utils.py
tests/fixtures/: README.md
tests/fixtures/anim/matrices/: runs.tsv  (+10 more)
tests/fixtures/bacterial_example/: README.md
tests/fixtures/bad_alignments/: README.md
tests/fixtures/index/: NC_002696.fasta.md5  NC_010338.fna.md5  NC_011916.fas.md5  NC_014100.fna.md5
tests/fixtures/lzani/: bad_headers.tsv
tests/fixtures/skani/: bad_headers.skani
tests/fixtures/tools/: README.md  mock_makeblastdb  mock_minimap2  mock_skani
tests/fixtures/viral_example/: README.md  genome_3.fasta  genome_4.fasta  viral_database.db
tests/generate_fixtures/: __init__.py  generate_anib_blast_files.py  generate_anib_blastdb_njs_files.py  generate_anib_fragment_files.py  generate_dnadiff_outputs.py  generate_pyani_anib_matrices.sh  generate_pyani_anim_matrices.sh  generate_pyani_fastani_matrices.sh  generate_pyani_lzani_matrices.sh  generate_target_anim_files.py  generate_target_anim_files.sh  generate_target_animinimap2_files.py  generate_target_dnadiff_files.py  generate_target_dnadiff_files.sh  generate_target_dnadiff_matrices.py  generate_target_fastani_files.py  generate_target_fastani_files.sh  generate_target_lzani_files.py  generate_target_md5.sh  generate_target_skani_files.py  generate_target_sourmash_files.py  generate_target_sourmash_matrices.py  update_anim_matrices.py
tests/methods/: __init__.py  test_anim.py  test_method_anim.py
tests/snakemake/: __init__.py  conftest.py  test_anib_workflow.py  test_anim_workflow.py  test_dnadiff_workflow.py  test_fastani_workflow.py  test_scheduler.py  test_snakemake_anib_workflow.py  test_snakemake_anim_files.py  test_snakemake_anim_workflow.py  test_snakemake_dnadiff_workflow.py  test_snakemake_fastani_files.py  test_snakemake_fastani_workflow.py  test_snakemake_index_workflow.py  test_snakemake_method_anim.py  test_snakemake_slurm.py  test_snakemake_sourmash_workflow.py  test_sourmash_workflow.py  test_workflows.py
tests/test_pyani_plus_output/anim/: matrix_hadamard_1.tab
(+494 files in other folders)
