[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyani-plus"
version = "0.0.1"
authors = [
    { name = "Leighton Pritchard", email = "leighton.pritchard@strath.ac.uk" },
    { name = "Angelika Kiepas", email = "angelika.kiepas@strath.ac.uk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["snakemake"]

[tool.ruff.lint]
select = ["ALL"]
pycodestyle.max-line-length = 120
ignore = ["S603"]

[tool.setuptools.packages.find]
where = ["pyani_plus"]

[project.urls]
Homepage = "https://github.com/pyani-plus/pyani-plus"
Issues = "https://github.com/pyani-plus/pyani-plus/issues"
