[project]
name = "pyani-plus"
version = "0.0.1"
authors = [
    { name = "Leighton Pritchard", email = "leighton.pritchard@strath.ac.uk" },
    { name = "Angelika Kiepas", email = "angelika.kiepas@strath.ac.uk" },
    { name = "Peter J. A. Cock", email = "peter.cock@strath.ac.uk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["snakemake", "sqlalchemy"]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyani_plus"]

[tool.ruff.lint]
select = ["ALL"]
pycodestyle.max-line-length = 120
ignore = ["ANN101", "ANN102", "COM812", "D203", "D213", "S603"]

[tool.ruff.lint.per-file-ignores]
# Ignore assert statements here:
"tests/*" = ["S101"]
# Ignore print and assert statements here:
"tests/generate_fixtures/*" = ["T201", "S101"]
# Ignore print statements in our CLI code here:
"pyani_plus/private_cli.py" = ["T201"]
"pyani_plus/public_cli.py" = ["T201"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["--doctest-modules", "--ignore=tests/generate_fixtures/"]
testpaths = [
    "tests",
    "pyani_plus",
]
doctest_optionflags = ["ELLIPSIS"]

[project.scripts]
".pyani-plus-private-cli" = "pyani_plus.private_cli:app"
"pyani-plus" = "pyani_plus.public_cli:app"

[project.urls]
Homepage = "https://github.com/pyani-plus/pyani-plus"
Issues = "https://github.com/pyani-plus/pyani-plus/issues"
